fix (#148): Fixed layout bug of footer being visible when main components are still loading

--- a/solardoc/frontend/src/assets/main.scss
+++ b/solardoc/frontend/src/assets/main.scss
@@ -15,7 +15,9 @@
 @use './notif' as *;
 
 // Make app take up whole screen
-body #app {
+html,
+body,
+body > #app {
   height: 100%;
   width: 100%;
   margin: 0;
